[package]
name = "s3_upload"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "s3_upload"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
aws-config = "0.55.3"
aws-sdk-s3 = "0.28"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2.3.3"
zip = "0.6.6"